MESS/MESS.Blazor/wwwroot/app.css
html, body {
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    height: 100%;
    margin: 0;
    background-color: white;
    color: black;
    transition: background-color 0.3s ease, color 0.3s ease;
}

body.dark-mode{
    background-color: #121212;
    color: white;
    transition: background-color 0.3s ease, color 0.3s ease;
}

body.light-mode .table,
body.light-mode .table th,
body.light-mode .table td {
    background-color: #ffffff; 
    color: #000000;
    border: 1px solid #dee2e6;
    transition: background-color 0.3s ease, color 0.3s ease;
}

body.light-mode .table.table-striped tbody tr {
    background-color: #6e6e6e; 
}

body.dark-mode .table,
body.dark-mode .table th,
body.dark-mode .table td {
    background-color: transparent; 
    color: #ffffff; 
    border: 1px solid #a8a8a8;
    transition: background-color 0.3s ease, color 0.3s ease;
}

body.dark-mode .table.table-striped tbody tr:nth-child(odd) {
    background-color: #151515; 
}

body.dark-mode .list-group.container {
    color: #ffffff;
    background-color: #1e1e1e;
    border: 1px solid rgba(255, 213, 2, 0);
}

.step {
    background-color: rgba(255, 255, 255, 0);
    color: #000000;
    border: 1px solid rgba(255, 213, 2, 0);
    padding: 10px;
    list-style-type: none;
}

body.dark-mode .step {
    background-color: rgba(54, 54, 54, 0);
    color: #ffffff;
    border: 1px solid rgba(255, 213, 2, 0);
    padding: 10px;
}

.page {
    display: flex;
    flex-direction: column;
    min-height: 100vh; 
    width: 100%;
}

.dark-mode .page {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    width: 100%;
    background-color: #1e1e1e;
    color: #ffffff;
}

.dark-mode .card {
    background-color: #2c2c2c;
    color: #ffffff;
    border: 1px solid rgb(19, 19, 19);
}

.dark-mode .form-floating .form-control { 
    background-color: #2c2c2c;
    color: #ffffff;
    border: 1px solid rgb(19, 19, 19);
}

.main {
    flex: 1;
}

a, .btn-link {
    color: #d6a100;
}

.btn-primary {
    color: #020000;
    background-color: #ffd502;
    border-color: #c37f00;
}

.btn {
    background-color: #ffd502;
    color: #020000;
    border: 3px solid #ffd502;
    margin: 5px;
}
.btn:hover {
    background-color: rgba(255, 213, 2, 0);
    color: #000000;
}

.dark-mode .btn:hover {
    background-color: rgba(54, 54, 54, 0);
    color: #ffffff;
}

.btn-checkbox {
    color: #ffd502;
    background-color: #020000;
}

.btn-warning {
    color: red;
    background-color: #020000;
    border: 3px solid red;
}


.btn-success{
    color: #4aff00;
    background-color: #020000;
    border: 3px solid #4aff00;
}

.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
}

.content {
    padding-top: 1.1rem;
}

h1:focus {
    outline: none;
}

.valid.modified:not([type=checkbox]) {
    outline: 1px solid #26b050;
}

.invalid {
    outline: 1px solid #e50000;
}

.validation-message {
    color: #e50000;
}

.blazor-error-boundary {
    background: url(data:image/svg+xml;base64,...) no-repeat 1rem/1.8rem, #b32121;
    padding: 1rem 1rem 1rem 3.7rem;
    color: white;
}

.blazor-error-boundary::after {
    content: "An error has occurred."
}

.darker-border-checkbox.form-check-input {
    border-color: #929292;
}

.form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
    color: var(--bs-secondary-color);
    text-align: end;
}

.form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
    text-align: start;
}

.header-container {
    margin-bottom: 4px;
}


@media (max-width: 768px) {
    .header-container {
        flex-direction: column;
    }
    .info-card {
        width: 100%;
        margin-bottom: 1rem;
    }
}

.darkmode {
    background-color: transparent;
    outline: none;
    color: #ffd502;
    position: fixed;
    width: 30px;
    height: 30px;
    right: 18px;
    top: 20px;
}

.darkmode .darkmode-button {
    position: fixed;
    right: 27px;
    top: 27px;
    border: none;
    outline: none;
    background: none;
    padding: 0;
    color: inherit;
}

.darkmode .step-node {
    background-color: #2c2c2c;
    color: #ffffff;
}

.toggle-images {
    top: 10px;
    right: 5px;
    display: flex;
    align-items: center;
}

@media (max-width: 768px) {
    .top-right-corner {
        top: 15px; 
        right: 15px;
    }
}

.custom-label::after {
    background-color: transparent !important;
}

.label::after {
    background-color: inherit !important;
}

table tbody tr {
    margin-bottom: 10px;
    padding-bottom: 10px;
}

td {
    white-space: nowrap;
}

